Simplificando métodos do MineverseChatPlayer